[gd_scene load_steps=2 format=3 uid="uid://b8k7m3n4p5q6r"]

[ext_resource type="Script" path="res://scripts/run/Run.gd" id="1_run"]

[node name="Run" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_run")

[node name="UI" type="CanvasLayer" parent="."]

[node name="BreadcrumbLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 0.0
anchor_top = 0.0
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 30.0
grow_horizontal = 0
grow_vertical = 0
text = "Main > Run"
horizontal_alignment = 0

[node name="HeaderContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -400.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="AnteLabel" type="Label" parent="UI/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üèÜ Ante: 1/20"
horizontal_alignment = 1

[node name="RaceTypeLabel" type="Label" parent="UI/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Race: Dual Meet"
horizontal_alignment = 1

[node name="SeedLabel" type="Label" parent="UI/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Seed: 0"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="UI/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üí∞ Gold: 100"
horizontal_alignment = 1

[node name="MainContainer" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 60.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsPanel" type="Panel" parent="UI/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(250, 0)

[node name="StatsVBox" type="VBoxContainer" parent="UI/MainContainer/StatsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatsHeader" type="Label" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "TEAM STATS"
horizontal_alignment = 1

[node name="HSeparatorStats" type="HSeparator" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2

[node name="SpeedLabel" type="Label" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2
text = "‚ö° Speed: 10"
horizontal_alignment = 0

[node name="EnduranceLabel" type="Label" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2
text = "üèîÔ∏è Endurance: 10"
horizontal_alignment = 0

[node name="StaminaLabel" type="Label" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2
text = "üí™ Stamina: 10"
horizontal_alignment = 0

[node name="PowerLabel" type="Label" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2
text = "üî• Power: 10"
horizontal_alignment = 0

[node name="HSeparatorTeam" type="HSeparator" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2

[node name="TeamInfoLabel" type="Label" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2
text = "Team: 0 Varsity, 0 JV"
horizontal_alignment = 0

[node name="TeamCompositionLabel" type="Label" parent="UI/MainContainer/StatsPanel/StatsVBox"]
layout_mode = 2
text = "Composition: None"
horizontal_alignment = 0

[node name="InventoryPanel" type="Panel" parent="UI/MainContainer"]
layout_mode = 2
size_flags_horizontal = 5

[node name="InventoryScroll" type="ScrollContainer" parent="UI/MainContainer/InventoryPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryVBox" type="VBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InventoryHeader" type="Label" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "INVENTORY"
horizontal_alignment = 1

[node name="HSeparatorInventory" type="HSeparator" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox"]
layout_mode = 2

[node name="VarsitySection" type="VBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox"]
layout_mode = 2

[node name="VarsityHeader" type="Label" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/VarsitySection"]
layout_mode = 2
text = "Varsity Runners (5)"
horizontal_alignment = 0

[node name="VarsityRunnersContainer" type="HBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/VarsitySection"]
layout_mode = 2
alignment = 1

[node name="JVSection" type="VBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox"]
layout_mode = 2

[node name="JVHeader" type="Label" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/JVSection"]
layout_mode = 2
text = "JV Runners (2)"
horizontal_alignment = 0

[node name="JVRunnersContainer" type="HBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/JVSection"]
layout_mode = 2
alignment = 1

[node name="DeckSection" type="VBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox"]
layout_mode = 2

[node name="DeckHeader" type="Label" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/DeckSection"]
layout_mode = 2
text = "Deck Cards"
horizontal_alignment = 0

[node name="DeckItemsContainer" type="HBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/DeckSection"]
layout_mode = 2
alignment = 1

[node name="BoostsSection" type="VBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox"]
layout_mode = 2

[node name="BoostsHeader" type="Label" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/BoostsSection"]
layout_mode = 2
text = "Boosts"
horizontal_alignment = 0

[node name="BoostsItemsContainer" type="HBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/BoostsSection"]
layout_mode = 2
alignment = 1

[node name="EquipmentSection" type="VBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox"]
layout_mode = 2

[node name="EquipmentHeader" type="Label" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/EquipmentSection"]
layout_mode = 2
text = "Equipment"
horizontal_alignment = 0

[node name="EquipmentItemsContainer" type="HBoxContainer" parent="UI/MainContainer/InventoryPanel/InventoryScroll/InventoryVBox/EquipmentSection"]
layout_mode = 2
alignment = 1

[node name="ActionPanel" type="Panel" parent="UI/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(250, 0)

[node name="ActionVBox" type="VBoxContainer" parent="UI/MainContainer/ActionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="ActionHeader" type="Label" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "ACTION HUB"
horizontal_alignment = 1

[node name="HSeparatorAction" type="HSeparator" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2

[node name="WinProbabilityLabel" type="Label" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2
text = "Win Probability: 50%"
horizontal_alignment = 1

[node name="WinProbabilityGauge" type="ProgressBar" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2
max_value = 100.0
value = 50.0
show_percentage = false

[node name="HSeparatorWinProb" type="HSeparator" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2

[node name="StartRaceButton" type="Button" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
text = "START RACE"

[node name="CompleteRaceButton" type="Button" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
disabled = true
text = "COMPLETE RACE"

[node name="ContinueToShopButton" type="Button" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)
visible = false
text = "CONTINUE TO SHOP"

[node name="HSeparatorActions" type="HSeparator" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2

[node name="ViewTeamButton" type="Button" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "VIEW TEAM"

[node name="BackButton" type="Button" parent="UI/MainContainer/ActionPanel/ActionVBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 40)
text = "BACK TO MENU"

[node name="BottomActionBar" type="HBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ResultPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="ResultLabel" type="Label" parent="UI/ResultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="LoadingPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
visible = false

[node name="LoadingLabel" type="Label" parent="UI/LoadingPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -25.0
offset_right = 150.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Loading Shop..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="TooltipPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 0
offset_left = 100.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 0
grow_vertical = 0
visible = false

[node name="TooltipLabel" type="Label" parent="UI/TooltipPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
text = ""
autowrap_mode = 3

[node name="PurchaseFeedbackLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "‚úì Purchased!"
horizontal_alignment = 1
vertical_alignment = 1
visible = false
